menambahkan responsifbe dan pading untuk dekstop

--- a/dashboard.css
+++ b/dashboard.css
@@ -16,7 +16,7 @@
 /* Animasi slideRightText hanya untuk teks */
 @keyframes slideRightText {
   from {
-    transform: translateX(-200%); /* Mulai dari luar layar sebelah kiri */
+    transform: translateX(-400%); /* Mulai dari luar layar sebelah kiri */
   }
   to {
     transform: translateX(0); /* Menuju posisi normal */
@@ -25,7 +25,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 0 20%;
   font-family: "Poppins", sans-serif;
   background-color: #eff6ff;
   color: #190069;
@@ -54,7 +54,7 @@ body {
   color: #190069;
   padding: 20px;
   font-size: 20px;
-  animation: slideRightText 1.5s ease-in-out; /* Gunakan animasi slideRight untuk teks */
+  animation: slideRightText 2s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
 
 /* profile */
@@ -215,7 +215,7 @@ body {
   position: fixed;
   bottom: 0;
   height: 6.5%;
-  width: 100%;
+  width: calc(60%); /* Lebar maksimum dikurangi margin body */
   background-color: white;
   border-radius: 25px 25px 0 0;
   display: flex;
@@ -231,7 +231,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0px 55px;
 }
 
 .navigasi .nav .navbar p {
@@ -241,6 +240,7 @@ body {
 }
 
 .navbar img {
+  margin: 0px 55px;
   margin-top: 10px;
   max-width: 25px;
   transition: transform 0.3s ease; /* Menambahkan transisi untuk efek yang lebih halus */
@@ -250,4 +250,16 @@ body {
 .navbar img:active {
   max-width: 27px;
   transform: rotate(10deg); /* Rotasi 10 derajat saat dihover atau diklik */
+}
+
+@media screen and (max-width: 768px) {
+  /* Stil CSS untuk layar berukuran 768px atau lebih kecil (mobile) */
+  body {
+    padding: 0;
+  }
+
+  .navigasi {
+    max-width: calc(100%);
+    width: 100%;
+  }
 }
