--- a/jadwal.css
+++ b/jadwal.css
@@ -13,11 +13,20 @@
   }
 }
 
+/* Animasi slideRightText hanya untuk teks */
+@keyframes slideRightText {
+  from {
+    transform: translateX(-400%); /* Mulai dari luar layar sebelah kiri */
+  }
+  to {
+    transform: translateX(0); /* Menuju posisi normal */
+  }
+}
+
 body {
   margin: 0;
-  padding: 0;
+  padding: 0 20%;
   font-family: "Poppins", sans-serif;
-
   background-color: #eff6ff;
   color: #190069;
 }
@@ -37,18 +46,9 @@ body {
   color: #190069;
   padding: 20px;
   font-size: 20px;
-  animation: slideRightText 1.5s ease-in-out; /* Gunakan animasi slideRight untuk teks */
+  animation: slideRightText 2s ease-in-out; /* Gunakan animasi slideRight untuk teks */
 }
 
-/* Animasi slideRightText hanya untuk teks */
-@keyframes slideRightText {
-  from {
-    transform: translateX(-200%); /* Mulai dari luar layar sebelah kiri */
-  }
-  to {
-    transform: translateX(0); /* Menuju posisi normal */
-  }
-}
 
 /* JADWAL */
 /* HARI */
@@ -232,7 +232,7 @@ body {
   position: fixed;
   bottom: 0;
   height: 6.5%;
-  width: 100%;
+  width: calc(60%); /* Lebar maksimum dikurangi margin body */
   background-color: white;
   border-radius: 25px 25px 0 0;
   display: flex;
@@ -248,7 +248,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0px 55px;
 }
 
 .navigasi .nav .navbar p {
@@ -258,6 +257,7 @@ body {
 }
 
 .navbar img {
+  margin: 0px 55px;
   margin-top: 10px;
   max-width: 25px;
   transition: transform 0.3s ease; /* Menambahkan transisi untuk efek yang lebih halus */
@@ -294,4 +294,16 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+@media screen and (max-width: 768px) {
+  /* Stil CSS untuk layar berukuran 768px atau lebih kecil (mobile) */
+  body {
+    padding: 0;
+  }
+
+  .navigasi {
+    max-width: calc(100%);
+    width: 100%;
+  }
 }
